Ajuste no gitignore para o db
Ajuste para o gitignore ignorar o sqlite e ajuste para a barra de pesquisa não aparecer quando houver authors no path da url

--- a/base_templates/global/base.html
+++ b/base_templates/global/base.html
@@ -8,7 +8,13 @@
 
 <body>
     {% include 'recipes/partials/header.html' %}
-    {% include 'recipes/partials/search.html' %}
+    {% if 'authors' not in request.path %}
+        {% include 'recipes/partials/search.html' %}
+    {% endif %}
+    {% if 'authors' in request.path %}
+        <br>
+    {% endif %}
+    
 
     <main class="main-content-container">
         {% block content %}{% endblock content %}
