--- a/base_templates/global/base.html
+++ b/base_templates/global/base.html
@@ -2,14 +2,14 @@
 <html lang="pt-BR">
 
 <head>
-    {% include 'recipes/partials/head.html' %}
+    {% include 'global/partials/head.html' %}
     <title>{% block title %}{% endblock title %} Recipes</title>
 </head>
 
 <body>
-    {% include 'recipes/partials/header.html' %}
+    {% include 'global/partials/header.html' %}
     {% if 'authors' not in request.path %}
-        {% include 'recipes/partials/search.html' %}
+        {% include 'global/partials/search.html' %}
     {% endif %}
     {% if 'authors' in request.path %}
         <br>
@@ -18,10 +18,10 @@
 
     <main class="main-content-container">
         {% block content %}{% endblock content %}
-        {% include 'recipes/partials/pagination.html' %}
+        {% include 'global/partials/pagination.html' %}
     </main>
 
-    {% include 'recipes/partials/footer.html' %}
+    {% include 'global/partials/footer.html' %}
 </body>
 
 </html>
